# ocs-automation

./: .env.example  .gitignore  .pulumi.env  CLAUDE.md  LICENSE  Pulumi.prod.yaml  Pulumi.yaml  README.md  SETUP.md  __main__.py  pyproject.toml  tasks.py
docs/plans/: 2026-03-09-openclaw-ec2-design.md  2026-03-09-openclaw-ec2-implementation.md  2026-03-09-security-hardening-design.md  2026-03-09-security-hardening-implementation.md  2026-03-11-simplified-architecture-implementation.md
docs/specs/: 2026-03-11-simplified-architecture-design.md
infra/: config.py  ec2.py  iam.py  s3.py  secrets.py  security_group.py
openclaw/: .env.example  Caddyfile  Dockerfile  claude-settings.json  docker-compose.yml  nginx-http.conf  nginx.conf
openclaw/skills/claude-code/: SKILL.md
openclaw/skills/ocs/: session-manager.sh  skill.json
openclaw/skills/ocs/prompts/: ci-triage.md  pr-review.md  scheduled-typecheck.md  work-on-issue.md
scripts/: backup-to-s3.sh  bootstrap.sh  deploy.sh  patch-slack-policy.sh  restore-from-s3.sh
session/: Dockerfile  docker-compose.yml  entrypoint.sh
