[project]
name = "ocs-automation"
version = "0.1.0"
description = "OpenClaw EC2 automation instance for open-chat-studio"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.225.1",
    "pulumi-aws>=7.21.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
